# prism-artifact

./: .gitignore  Cargo.toml  README.md  users.csv
benches/: membership_hash.rs  modeq.rs  root.rs
deployment/: sendmail_zkp.js  zkp_filter.sh
scripts/: sendmail_zkp.js
src/: lib.rs  parameters.rs  serialization.rs
src/protocols/: mod.rs  zkauth.rs
src/protocols/hash_to_prime/: mod.rs  snark_hash.rs
src/protocols/membership/: mod.rs
src/protocols/modeq/: mod.rs
src/protocols/root/: mod.rs
src/utils/: curve.rs
